force-app/main/default/objects/Conversa_Beto__c/Conversa_Beto__c.object-meta.xml
<CustomObject>
    <label>Conversa Beto</label>
    <nameField>
        <displayFormat>CB {000000000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversas Beto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>