force-app/main/default/objects/Conversa_Beto__c/fields/cnpjcpf__c.field-meta.xml
<CustomField>
    <fullName>cnpjcpf__c</fullName>
    <label>cnpjcpf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>