force-app/main/default/objects/Conversa_Beto__c/fields/Feedback_da_Visita__c.field-meta.xml
<CustomField>
    <fullName>Feedback_da_Visita__c</fullName>
    <label>Feedback da Visita</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>