force-app/main/default/objects/Conversa_Beto__c/fields/ID_Visita__c.field-meta.xml
<CustomField>
    <fullName>ID_Visita__c</fullName>
    <label>ID Visita</label>
    <length>18</length>
    <type>Text</type>
</CustomField>