force-app/main/default/objects/Conversa_Beto__c/fields/IdConta__c.field-meta.xml
<CustomField>
    <fullName>IdConta__c</fullName>
    <label>IdConta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>