force-app/main/default/objects/Conversa_Beto__c/fields/Inativo__c.field-meta.xml
<CustomField>
    <fullName>Inativo__c</fullName>
    <formula>NOW() - LastModifiedDate &gt; (1/48)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inativo</label>
    <type>Checkbox</type>
</CustomField>