force-app/main/default/objects/Conversa_Beto__c/fields/Localizacao_validada__c.field-meta.xml
<CustomField>
    <fullName>Localizacao_validada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Localização validada</label>
    <type>Checkbox</type>
</CustomField>