force-app/main/default/objects/Conversa_Beto__c/fields/Meta_do_m_s__c.field-meta.xml
<CustomField>
    <fullName>Meta_do_m_s__c</fullName>
    <label>Meta do mês</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>