force-app/main/default/objects/Conversa_Beto__c/fields/Oportunidades__c.field-meta.xml
<CustomField>
    <fullName>Oportunidades__c</fullName>
    <label>Oportunidades</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>