force-app/main/default/objects/Conversa_Beto__c/fields/Produtos__c.field-meta.xml
<CustomField>
    <fullName>Produtos__c</fullName>
    <label>Produtos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>