force-app/main/default/objects/Conversa_Beto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Telefone__c</columns>
    <columns>Estado__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
    <language>pt_BR</language>
</ListView>